Handle update ride